# 2025-p1-Slothlesss

./: README.md  endpoints.http  endpoints.https  enpoints.http  pyproject.toml
todo/views/: routes.py
