[project]
name = "2025-p1-slothlesss"
version = "0.1.0"
description = ""
authors = [
    {name = "Minh Long Vu",email = "you@example.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
