[project]
name = "2025-p1-slothlesss"
version = "0.1.0"
description = ""
authors = [
    {name = "Minh Long Vu",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
